--- a/src/main/resources/css/Main.css
+++ b/src/main/resources/css/Main.css
@@ -1,6 +1,3 @@
-/* Main.css */
-
-/* Button styles */
 .jfx-button {
 
     -fx-background-color: transparent;
@@ -13,17 +10,15 @@
 
 }
 
-/* Button hover effect */
 .jfx-button:hover {
     -fx-background-color: #2893ff;
     -fx-cursor: hand;
 }
 
 .dashboard-pane {
-    -fx-background-color: linear-gradient(to bottom, #a6c0fe, #e3f0fb); /* Gradient from #a6c0fe to #e3f0fb */
+    -fx-background-color: linear-gradient(to bottom, #a6c0fe, #e3f0fb);
 }
 
-/* Add shadow effect to the AnchorPane */
 .dashboard-paneA {
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.4), 20, 0, 0, 4);
 }
