--- a/src/main/resources/Report/PlaceBill.jrxml
+++ b/src/main/resources/Report/PlaceBill.jrxml
@@ -4,7 +4,9 @@
     <property name="com.jaspersoft.studio.data.sql.tables" value=""/>
     <property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter (14)"/>
     <parameter name="orderId" class="java.lang.String"/>
-    <parameter name="total" class="java.lang.String"/>
+    <parameter name="total" class="java.lang.Double"/>
+    <parameter name="paid amount" class="java.lang.Double"/>
+    <parameter name="balance" class="java.lang.Double"/>
     <queryString language="SQL">
         <![CDATA[SELECT orderDetail.ORD_ID, orders.dateOfPlace, batch.price,orderDetail.BAT_ID,batch.type,orderDetail.qty
 
@@ -12,7 +14,7 @@ FROM orders
 
 JOIN orderDetail ON orders.ORD_ID = orderDetail.ORD_ID
 
-JOIN batch ON orderDetail.BAT_ID = batch.BAT_ID where  `LnvCo`.`orderDetail`.`ORD_ID` =  $P{orderId} ]]>
+JOIN batch ON orderDetail.BAT_ID = batch.BAT_ID where  `LnvCo`.`orderDetail`.`ORD_ID` =  $P{orderId}]]>
     </queryString>
     <field name="ORD_ID" class="java.lang.String">
         <property name="com.jaspersoft.studio.field.name" value="ORD_ID"/>
@@ -66,7 +68,7 @@ JOIN batch ON orderDetail.BAT_ID = batch.BAT_ID where  `LnvCo`.`orderDetail`.`OR
         <band splitType="Stretch"/>
     </background>
     <title>
-        <band height="79" splitType="Stretch">
+        <band height="121" splitType="Stretch">
             <staticText>
                 <reportElement x="330" y="5" width="224" height="30" uuid="e130801b-c8b4-4c6b-bd6e-85413b4ff299"/>
                 <textElement>
@@ -88,23 +90,50 @@ JOIN batch ON orderDetail.BAT_ID = batch.BAT_ID where  `LnvCo`.`orderDetail`.`OR
                 </textElement>
                 <text><![CDATA[0354718456]]></text>
             </staticText>
+            <image>
+                <reportElement x="200" y="-10" width="110" height="90" uuid="5e52e02b-f3fd-432b-bd07-23861d8db99f"/>
+                <imageExpression><![CDATA["/home/sehan/Downloads/Logo-02-01-01 (1).png"]]></imageExpression>
+            </image>
         </band>
     </title>
     <pageHeader>
-        <band height="35" splitType="Stretch">
+        <band height="65" splitType="Stretch">
             <textField>
-                <reportElement x="20" y="5" width="100" height="30" uuid="48e16a3a-8ee6-4061-ac19-fac7bc09e2a6"/>
+                <reportElement x="105" y="5" width="100" height="30" uuid="48e16a3a-8ee6-4061-ac19-fac7bc09e2a6"/>
                 <textElement>
                     <font size="14" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$P{orderId}]]></textFieldExpression>
             </textField>
+            <staticText>
+                <reportElement x="365" y="0" width="110" height="30" uuid="79e9b6ec-fe8b-4f90-a4c5-004d759feb99"/>
+                <textElement>
+                    <font fontName="Serif" size="20" isBold="true"/>
+                </textElement>
+                <text><![CDATA[INVOICE]]></text>
+            </staticText>
+            <line>
+                <reportElement x="361" y="25" width="110" height="1" uuid="5cb0e51f-1f93-46bc-b2e8-58f80d5c8f15">
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <graphicElement>
+                    <pen lineWidth="2.0"/>
+                </graphicElement>
+            </line>
+            <line>
+                <reportElement x="90" y="64" width="605" height="1" uuid="423a65a4-fda8-485b-8858-05480cd693e4">
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <graphicElement>
+                    <pen lineWidth="2.0"/>
+                </graphicElement>
+            </line>
         </band>
     </pageHeader>
     <columnHeader>
-        <band height="61" splitType="Stretch">
+        <band height="37" splitType="Stretch">
             <staticText>
-                <reportElement x="28" y="0" width="100" height="30" uuid="673da148-bb77-4f9d-b1b7-88891be538a1">
+                <reportElement x="102" y="6" width="100" height="30" uuid="673da148-bb77-4f9d-b1b7-88891be538a1">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="347419d7-f2e4-4853-b3c2-8b2f1e3dd568"/>
                 </reportElement>
                 <textElement>
@@ -113,7 +142,7 @@ JOIN batch ON orderDetail.BAT_ID = batch.BAT_ID where  `LnvCo`.`orderDetail`.`OR
                 <text><![CDATA[ORD_ID]]></text>
             </staticText>
             <staticText>
-                <reportElement x="155" y="0" width="100" height="30" uuid="bb3af287-3381-4a24-9a89-370ae0bc7ee7">
+                <reportElement x="232" y="5" width="100" height="30" uuid="bb3af287-3381-4a24-9a89-370ae0bc7ee7">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c657e44a-3d35-406c-b075-5e612570863a"/>
                 </reportElement>
                 <textElement>
@@ -122,94 +151,176 @@ JOIN batch ON orderDetail.BAT_ID = batch.BAT_ID where  `LnvCo`.`orderDetail`.`OR
                 <text><![CDATA[BAT_ID]]></text>
             </staticText>
             <staticText>
-                <reportElement x="279" y="0" width="100" height="30" uuid="d475d2f3-4209-4335-8f86-8e3ce8749952">
+                <reportElement x="356" y="7" width="100" height="30" uuid="d475d2f3-4209-4335-8f86-8e3ce8749952">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f9794eed-327c-46a7-899b-6e02d69b8c60"/>
                 </reportElement>
                 <textElement>
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[price]]></text>
+                <text><![CDATA[Price]]></text>
             </staticText>
             <staticText>
-                <reportElement x="412" y="0" width="100" height="30" uuid="b557a5d8-ddbc-413f-939d-841eb3f50642">
+                <reportElement x="489" y="7" width="100" height="30" uuid="b557a5d8-ddbc-413f-939d-841eb3f50642">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="27e8d331-ba4d-4ff4-896e-64a585539c6a"/>
                 </reportElement>
                 <textElement>
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[qty]]></text>
+                <text><![CDATA[Qty]]></text>
             </staticText>
             <staticText>
-                <reportElement x="520" y="0" width="100" height="30" uuid="fc87c227-6f5d-42bb-9c8f-6dc4513e904a">
+                <reportElement x="597" y="7" width="100" height="30" uuid="fc87c227-6f5d-42bb-9c8f-6dc4513e904a">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="31047a68-293f-4aea-9022-f0ea756d6f0a"/>
                 </reportElement>
                 <textElement>
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[dateOfPlace]]></text>
+                <text><![CDATA[DateOfPlace]]></text>
             </staticText>
         </band>
     </columnHeader>
     <detail>
-        <band height="42" splitType="Stretch">
+        <band height="47" splitType="Stretch">
             <textField>
-                <reportElement x="28" y="10" width="100" height="30" uuid="fc30f28f-0bf8-4aea-9a11-a7e9158c797b">
+                <reportElement x="106" y="10" width="100" height="30" uuid="fc30f28f-0bf8-4aea-9a11-a7e9158c797b">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="347419d7-f2e4-4853-b3c2-8b2f1e3dd568"/>
                 </reportElement>
+                <textElement>
+                    <font isBold="true"/>
+                </textElement>
                 <textFieldExpression><![CDATA[$F{ORD_ID}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="155" y="10" width="100" height="30" uuid="a575bb6a-c245-4c84-b572-cc0278f8eb2a">
+                <reportElement x="232" y="10" width="100" height="30" uuid="a575bb6a-c245-4c84-b572-cc0278f8eb2a">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c657e44a-3d35-406c-b075-5e612570863a"/>
                 </reportElement>
+                <textElement>
+                    <font isBold="true"/>
+                </textElement>
                 <textFieldExpression><![CDATA[$F{BAT_ID}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="270" y="10" width="100" height="30" uuid="3f19b64e-b284-4703-ba62-b2cc276468e1">
+                <reportElement x="347" y="10" width="100" height="30" uuid="3f19b64e-b284-4703-ba62-b2cc276468e1">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f9794eed-327c-46a7-899b-6e02d69b8c60"/>
                 </reportElement>
+                <textElement>
+                    <font isBold="true"/>
+                </textElement>
                 <textFieldExpression><![CDATA[$F{price}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="390" y="10" width="100" height="30" uuid="2d9509a0-4a75-4131-85f8-4827c9e949a7">
+                <reportElement x="488" y="10" width="100" height="30" uuid="2d9509a0-4a75-4131-85f8-4827c9e949a7">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="27e8d331-ba4d-4ff4-896e-64a585539c6a"/>
                 </reportElement>
+                <textElement>
+                    <font isBold="true"/>
+                </textElement>
                 <textFieldExpression><![CDATA[$F{qty}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="512" y="10" width="100" height="30" uuid="8a90a767-97ca-48c7-8835-d6301af7a106">
+                <reportElement x="589" y="10" width="100" height="30" uuid="8a90a767-97ca-48c7-8835-d6301af7a106">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="31047a68-293f-4aea-9022-f0ea756d6f0a"/>
                 </reportElement>
+                <textElement>
+                    <font isBold="true"/>
+                </textElement>
                 <textFieldExpression><![CDATA[$F{dateOfPlace}]]></textFieldExpression>
             </textField>
+            <line>
+                <reportElement x="90" y="-16" width="605" height="7" uuid="5265a0ed-0c24-4d0e-a6fe-bf31ea145905">
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <graphicElement>
+                    <pen lineWidth="2.0"/>
+                </graphicElement>
+            </line>
         </band>
     </detail>
     <columnFooter>
-        <band height="48" splitType="Stretch">
+        <band height="118" splitType="Stretch">
             <staticText>
-                <reportElement x="590" y="10" width="100" height="30" uuid="49ffc4d4-bd07-4a62-9650-04d7d17c14c4"/>
+                <reportElement x="492" y="10" width="100" height="30" uuid="49ffc4d4-bd07-4a62-9650-04d7d17c14c4"/>
                 <textElement>
                     <font size="16" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Net Total :]]></text>
             </staticText>
+            <staticText>
+                <reportElement x="460" y="37" width="130" height="30" uuid="ca9d5e9b-a389-4450-93cf-b450bc8eb709"/>
+                <textElement>
+                    <font size="16" isBold="true"/>
+                </textElement>
+                <text><![CDATA[Paid Amount :]]></text>
+            </staticText>
+            <staticText>
+                <reportElement x="504" y="67" width="88" height="30" uuid="9ff32495-d139-4f55-a1d0-f7fe1ea5dc4a"/>
+                <textElement>
+                    <font size="16" isBold="true"/>
+                </textElement>
+                <text><![CDATA[Balance :]]></text>
+            </staticText>
+            <line>
+                <reportElement x="599" y="60" width="100" height="1" uuid="c07426a2-b37e-40b8-8cc0-24b0187893db">
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <graphicElement>
+                    <pen lineWidth="2.0"/>
+                </graphicElement>
+            </line>
+            <line>
+                <reportElement x="599" y="90" width="100" height="1" uuid="a8e92ef4-3239-4613-9013-973d8830fcca">
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <graphicElement>
+                    <pen lineWidth="2.0"/>
+                </graphicElement>
+            </line>
+            <line>
+                <reportElement x="599" y="96" width="100" height="1" uuid="d4b1f9f4-f0a5-412b-bcaa-42c3a60254dd">
+                    <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                </reportElement>
+                <graphicElement>
+                    <pen lineWidth="2.0"/>
+                </graphicElement>
+            </line>
             <textField>
-                <reportElement x="698" y="11" width="100" height="30" uuid="42a36fc3-723d-4399-b6cd-91dc571cb594"/>
+                <reportElement x="631" y="13" width="100" height="30" uuid="e2598fa7-194a-4274-9bd1-906e7ca172c4"/>
                 <textElement>
                     <font size="14" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$P{total}]]></textFieldExpression>
             </textField>
+            <textField>
+                <reportElement x="630" y="39" width="100" height="30" uuid="9458dea1-00f0-46f8-b674-82e8b5459e76"/>
+                <textElement>
+                    <font size="14" isBold="true"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$P{paid amount}]]></textFieldExpression>
+            </textField>
+            <textField>
+                <reportElement x="629" y="70" width="113" height="30" uuid="df155ddc-b661-4111-ada8-72272d7e5f18"/>
+                <textElement>
+                    <font size="14" isBold="true"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$P{balance}]]></textFieldExpression>
+            </textField>
         </band>
     </columnFooter>
     <pageFooter>
-        <band height="54" splitType="Stretch">
+        <band height="79" splitType="Stretch">
             <staticText>
-                <reportElement x="280" y="20" width="360" height="30" uuid="b15a4ce0-257a-4667-b289-0500b8c4c29d"/>
+                <reportElement x="220" y="46" width="360" height="30" uuid="b15a4ce0-257a-4667-b289-0500b8c4c29d"/>
                 <textElement textAlignment="Center">
                     <font size="14" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Aluthgama Road,Yatagala,Alpitiya]]></text>
+            </staticText>
+            <staticText>
+                <reportElement x="216" y="24" width="360" height="30" uuid="b5bdcfd7-b479-4e11-ae5e-22fcd90fdfb4"/>
+                <textElement textAlignment="Center">
+                    <font size="14" isBold="true"/>
+                </textElement>
+                <text><![CDATA[Thank you !!! Come again !!!]]></text>
             </staticText>
         </band>
     </pageFooter>
